no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 90f6701b23165e1a39fa2a9730f5a3841069dab6

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
@@ -5929,11 +5929,11 @@ deaktiviert
 Sie
 k
 nnen
-es
+sie
 aktivieren
-aber
 dies
 kann
+aber
 riskant
 sein
 .
@@ -5999,6 +5999,9 @@ Es
 kann
 riskant
 sein
+sie
+zu
+verwenden
 .
 <
 /
