--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
@@ -4749,6 +4749,66 @@ string
 -
 Text
 shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+se
+puede
+instalar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
 after
 successfully
 enabled
@@ -5927,12 +5987,14 @@ Mozilla
 y
 ha
 sido
-desactivada
+deshabilitada
 .
-Puede
-habilitarlo
-pero
+Se
 puede
+habilitar
+pero
+podr
+a
 ser
 riesgoso
 .
@@ -5996,8 +6058,9 @@ ticas
 de
 Mozilla
 .
-Usarlo
-puede
+Usarla
+podr
+a
 ser
 riesgoso
 .
