--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fi/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fi/strings.xml
@@ -4138,13 +4138,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4200,6 +4216,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4220,6 +4252,40 @@ asentaminen
 ep
 onnistui
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Laajennusta
+ei
+voi
+asentaa
 <
 /
 string
@@ -4588,6 +4654,65 @@ m
 alusta
 ei
 tue
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+rikkoo
+Mozillan
+k
+yt
+nt
+j
+eik
+sit
+voida
+asentaa
 .
 <
 /
@@ -5637,6 +5762,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+N
+yt
+yksityiskohdat
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5693,6 +5854,144 @@ turvallisuus
 tai
 vakausongelmian
 vuoksi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+T
+m
+laajennus
+rikkoo
+Mozillan
+k
+yt
+nt
+j
+ja
+on
+poistettu
+k
+yt
+st
+.
+Voit
+ottaa
+sen
+k
+ytt
+n
+mutta
+se
+voi
+olla
+riskialtista
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+T
+m
+laajennus
+rikkoo
+Mozillan
+k
+yt
+nt
+j
+.
+Sen
+k
+ytt
+voi
+olla
+riskialtista
 .
 <
 /
