--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fr/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fr/strings.xml
@@ -4314,13 +4314,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4376,6 +4392,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4396,6 +4428,41 @@ de
 cette
 extension
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Impossible
+d
+installer
+l
+extension
 <
 /
 string
@@ -4798,6 +4865,65 @@ possible
 sur
 cette
 plateforme
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+enfreint
+les
+politiques
+de
+Mozilla
+et
+ne
+peut
+tre
+install
 .
 <
 /
@@ -5841,6 +5967,43 @@ mozac_feature_addons_status_learn_more
 En
 savoir
 plus
+<
+/
+string
+>
+<
+!
+-
+-
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Consulter
+les
+d
+tails
 <
 /
 string
