--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fy-rNL/strings.xml
@@ -4148,13 +4148,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4208,6 +4224,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4227,6 +4259,40 @@ twreiding
 is
 mislearre
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Kin
+twreiding
+net
+ynstallearje
 <
 /
 string
@@ -4594,6 +4660,65 @@ wurdt
 op
 dit
 platfoarm
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+skeint
+it
+belied
+fan
+Mozilla
+en
+kin
+net
+ynstallearre
+wurde
 .
 <
 /
@@ -5627,6 +5752,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Details
+besjen
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5680,6 +5840,138 @@ feilichheids
 -
 of
 stabiliteitsproblemen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Dizze
+twreiding
+skeint
+it
+belied
+fan
+Mozilla
+en
+is
+tskeakele
+.
+Jo
+kinne
+it
+ynskeakelje
+mar
+dit
+kin
+gefaarlik
+w
+ze
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Dizze
+twreiding
+skeint
+it
+belied
+fan
+Mozilla
+.
+It
+br
+ken
+hjirfan
+kin
+gefaarlik
+w
+ze
 .
 <
 /
