--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-ia/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-ia/strings.xml
@@ -4187,13 +4187,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4246,6 +4262,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4263,6 +4295,40 @@ installar
 iste
 extension
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Impossibile
+installar
+le
+extension
 <
 /
 string
@@ -4638,6 +4704,65 @@ supportate
 sur
 iste
 platteforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+le
+directivas
+de
+Mozilla
+e
+non
+pote
+esser
+installate
 .
 <
 /
@@ -5667,6 +5792,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Vider
+detalios
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5725,6 +5885,135 @@ securitate
 o
 de
 stabilitate
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Iste
+extension
+viola
+le
+directivas
+de
+Mozilla
+e
+ha
+essite
+disactivate
+.
+Tu
+pote
+activar
+illo
+ma
+isto
+pote
+esser
+riscose
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Iste
+extension
+viola
+le
+directivas
+de
+Mozilla
+.
+Usar
+lo
+pote
+esser
+riscose
 .
 <
 /
