--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-it/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-it/strings.xml
@@ -4169,13 +4169,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4228,6 +4244,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4246,6 +4278,40 @@ estensione
 non
 riuscita
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Impossibile
+installare
+l
+estensione
 <
 /
 string
@@ -4603,6 +4669,65 @@ supportati
 su
 questa
 piattaforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+i
+criteri
+di
+Mozilla
+e
+non
+pu
+essere
+installato
 .
 <
 /
@@ -5626,6 +5751,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Mostra
+dettagli
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5684,6 +5844,137 @@ stabilit
 o
 la
 sicurezza
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Questa
+estensione
+viola
+i
+criteri
+di
+Mozilla
+ed
+stata
+disattivata
+.
+possibile
+attivarla
+ma
+il
+suo
+utilizzo
+potrebbe
+comportare
+dei
+rischi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Questa
+estensione
+viola
+i
+criteri
+di
+Mozilla
+.
+Il
+suo
+utilizzo
+potrebbe
+comportare
+dei
+rischi
 .
 <
 /
