--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-kab/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-kab/strings.xml
@@ -4273,13 +4273,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4333,6 +4349,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4353,6 +4385,43 @@ zefr
 -
 a
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Asbeddi
+n
+usi
+zef
+d
+awez
+i
 <
 /
 string
@@ -4731,6 +4800,65 @@ ert
 -
 a
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+ur
+iquder
+ara
+tasertit
+n
+Mozilla
+ur
+yezmir
+ara
+ad
+yettusbedd
 <
 /
 string
@@ -5761,6 +5889,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Wali
+talqayt
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5818,6 +5981,145 @@ ne
 n
 uqe
 ed
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Asi
+zef
+-
+a
+ur
+iquder
+ara
+tasertit
+n
+Mozilla
+yettwakkes
+.
+Tzemre
+ad
+t
+-
+tremde
+d
+acu
+yezmer
+ad
+tes
+uguren
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Asi
+zef
+-
+a
+ur
+iquder
+ara
+tasertit
+n
+Mozilla
+.
+Aseqdec
+-
+is
+yezmer
+ad
+d
+-
+yeglu
+s
+wuguren
 .
 <
 /
