--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rBR/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rBR/strings.xml
@@ -4242,13 +4242,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4302,6 +4318,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4321,6 +4353,41 @@ esta
 extens
 o
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Falha
+ao
+instalar
+extens
+o
 <
 /
 string
@@ -4705,6 +4772,64 @@ o
 suportadas
 nesta
 plataforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+diretrizes
+da
+Mozilla
+n
+o
+pode
+ser
+instalado
 .
 <
 /
@@ -5741,6 +5866,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ver
+detalhes
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5797,6 +5957,134 @@ seguran
 a
 ou
 estabilidade
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Esta
+extens
+o
+viola
+diretrizes
+da
+Mozilla
+e
+foi
+desativada
+.
+Voc
+tem
+op
+o
+de
+ativar
+mas
+pode
+ser
+arriscado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Esta
+extens
+o
+viola
+diretrizes
+da
+Mozilla
+.
+Usar
+pode
+ser
+arriscado
 .
 <
 /
