--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sk/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sk/strings.xml
@@ -4305,13 +4305,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4367,6 +4383,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4387,6 +4419,44 @@ nepodarilo
 nain
 talova
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Nie
+je
+mo
+n
+nain
+talova
+roz
+renie
 <
 /
 string
@@ -4775,6 +4845,64 @@ t
 to
 platforma
 nepodporuje
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+poru
+uje
+pravidl
+Mozilly
+a
+ned
+sa
+nain
+talova
 .
 <
 /
@@ -5847,6 +5975,40 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Podrobnosti
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5906,6 +6068,138 @@ alebo
 bezpe
 nos
 ou
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Toto
+roz
+renie
+poru
+uje
+pravidl
+Mozilly
+a
+bolo
+zak
+zan
+.
+M
+ete
+ho
+povoli
+ale
+m
+e
+to
+by
+riskantn
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Toto
+roz
+renie
+poru
+uje
+pravidl
+Mozilly
+.
+Jeho
+pou
+vanie
+m
+e
+by
+riskantn
 .
 <
 /
