--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
@@ -4189,13 +4189,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4252,6 +4268,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4271,6 +4303,42 @@ iritve
 ni
 uspela
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Raz
+iritve
+ni
+mogo
+e
+namestiti
 <
 /
 string
@@ -4641,6 +4709,65 @@ tej
 platformi
 ni
 podprto
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+kr
+i
+Mozilline
+pravilnike
+in
+ga
+ni
+mogo
+e
+namestiti
 .
 <
 /
@@ -5695,6 +5822,40 @@ mozac_feature_addons_status_learn_more
 Ve
 o
 tem
+<
+/
+string
+>
+<
+!
+-
+-
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Podrobnosti
 <
 /
 string
