--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-vi/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-vi/strings.xml
@@ -4679,13 +4679,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4742,6 +4758,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4766,6 +4798,45 @@ ch
 n
 y
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Kh
+ng
+th
+c
+i
+t
+ti
+n
+ch
 <
 /
 string
@@ -5197,6 +5268,72 @@ t
 ng
 n
 y
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+Kh
+ng
+th
+c
+i
+t
+%
+1
+s
+do
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
 .
 <
 /
@@ -6302,6 +6439,43 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Xem
+chi
+ti
+t
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -6365,6 +6539,179 @@ ho
 c
 n
 nh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Ti
+n
+ch
+m
+r
+ng
+n
+y
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
+v
+b
+v
+hi
+u
+h
+a
+.
+B
+n
+c
+th
+k
+ch
+ho
+t
+n
+nh
+ng
+i
+u
+n
+y
+c
+th
+g
+y
+r
+i
+ro
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Ti
+n
+ch
+m
+r
+ng
+n
+y
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
+.
+S
+d
+ng
+n
+c
+th
+g
+y
+r
+i
+ro
 .
 <
 /
