--- a/mobile/android/focus-android/app/src/main/res/values-gl/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-gl/strings.xml
@@ -7109,6 +7109,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Pechar
 <
@@ -13330,57 +13344,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Entrado
-no
-modo
-de
-pantalla
-completa
-<
-/
-string
->
-<
-!
--
--
 Preference
 for
 switching
@@ -16008,6 +15971,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Para
 sa
@@ -16056,6 +16033,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Para
 sa
@@ -16072,6 +16063,142 @@ a
 tecla
 de
 retroceso
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Arrastra
+dende
+a
+parte
+superior
+e
+usa
+o
+xesto
+cara
+atr
+s
+para
+sa
+r
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Arrastra
+desde
+arriba
+e
+preme
+cara
+atr
+s
+para
+sa
+r
 <
 /
 string
