--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-en-rGB/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-en-rGB/strings.xml
@@ -4145,13 +4145,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4205,6 +4221,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4223,6 +4255,40 @@ install
 this
 extension
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Can
+t
+install
+extension
 <
 /
 string
@@ -4593,6 +4659,64 @@ supported
 on
 this
 platform
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+violates
+Mozilla
+s
+policies
+and
+can
+t
+be
+installed
 .
 <
 /
@@ -5618,6 +5742,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+See
+details
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5673,6 +5832,133 @@ security
 or
 stability
 issues
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+This
+extension
+violates
+Mozilla
+s
+policies
+and
+has
+been
+disabled
+.
+You
+can
+enable
+it
+but
+this
+may
+be
+risky
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+This
+extension
+violates
+Mozilla
+s
+policies
+.
+Using
+it
+may
+be
+risky
 .
 <
 /
