--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-nl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-nl/strings.xml
@@ -4134,13 +4134,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4194,6 +4210,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4212,6 +4244,40 @@ deze
 extensie
 mislukt
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Kan
+extensie
+niet
+installeren
 <
 /
 string
@@ -4586,6 +4652,66 @@ ondersteund
 op
 dit
 platform
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+schendt
+het
+beleid
+van
+Mozilla
+en
+kan
+niet
+worden
+ge
+nstalleerd
 .
 <
 /
@@ -5618,6 +5744,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Details
+bekijken
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5671,6 +5832,135 @@ beveiligings
 -
 of
 stabiliteitsproblemen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Deze
+extensie
+schendt
+het
+beleid
+van
+Mozilla
+en
+is
+uitgeschakeld
+.
+U
+kunt
+hem
+inschakelen
+maar
+dit
+kan
+riskant
+zijn
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Deze
+extensie
+schendt
+het
+beleid
+van
+Mozilla
+.
+Het
+gebruik
+ervan
+kan
+riskant
+zijn
 .
 <
 /
