no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 08a4ff955dd67a09f52da427541e9983ad4c3ef0

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
@@ -4375,6 +4375,7 @@ mozac_feature_addons_cant_install_extension
 >
 Methu
 gosod
+yr
 estyniad
 <
 /
@@ -4814,8 +4815,9 @@ Mae
 1
 s
 yn
-torri
-polis
+groes
+i
+bolis
 au
 Mozilla
 ac
@@ -6002,8 +6004,9 @@ r
 estyniad
 hwn
 yn
-torri
-polis
+groes
+i
+bolis
 au
 Mozilla
 ac
@@ -6081,8 +6084,9 @@ r
 estyniad
 hwn
 yn
-torri
-polis
+groes
+i
+bolis
 au
 Mozilla
 .
