--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rCL/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rCL/strings.xml
@@ -4228,13 +4228,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4290,6 +4306,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4311,6 +4343,43 @@ esta
 extensi
 n
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+No
+se
+puede
+instalar
+la
+extensi
+n
 <
 /
 string
@@ -4683,6 +4752,66 @@ compatible
 con
 esta
 plataforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+puede
+ser
+instalado
 .
 <
 /
@@ -5725,6 +5854,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ver
+detalles
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5781,6 +5945,138 @@ de
 seguridad
 o
 estabilidad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Esta
+extensi
+n
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+deshabilitada
+.
+La
+puedes
+habilitar
+pero
+podr
+a
+ser
+riesgoso
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Esta
+extensi
+n
+viola
+las
+pol
+ticas
+de
+Mozilla
+.
+Usarla
+podr
+a
+ser
+riesgoso
 .
 <
 /
