--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-is/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-is/strings.xml
@@ -4248,13 +4248,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4311,6 +4327,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4331,6 +4363,42 @@ upp
 ennan
 forritsauka
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Tekst
+ekki
+a
+setja
+upp
+forritsauka
 <
 /
 string
@@ -4723,6 +4791,70 @@ ekki
 stutt
 essu
 kerfi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+br
+tur
+gegn
+reglum
+Mozilla
+og
+er
+v
+ekki
+h
+gt
+a
+setja
+a
+upp
 .
 <
 /
@@ -5787,6 +5919,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Sj
+n
+nar
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5846,6 +6014,141 @@ e
 a
 st
 ugleika
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+essi
+forritsauki
+br
+tur
+gegn
+reglum
+Mozilla
+og
+hefur
+veri
+ger
+ur
+virkur
+.
+getur
+virkja
+etta
+en
+a
+g
+ti
+veri
+h
+ttusamt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+essi
+forritsauki
+br
+tur
+gegn
+reglum
+Mozilla
+.
+a
+getur
+veri
+h
+ttusamt
+a
+nota
+hann
 .
 <
 /
