--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sl/strings.xml
@@ -5948,6 +5948,136 @@ this
 add
 -
 on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Ta
+raz
+iritev
+kr
+i
+Mozilline
+pravilnike
+zato
+je
+bila
+onemogo
+ena
+.
+Lahko
+jo
+omogo
+ite
+vendar
+je
+to
+morda
+nevarno
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Ta
+raz
+iritev
+kr
+i
+Mozilline
+pravilnike
+.
+Njena
+uporaba
+je
+morda
+nevarna
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
 hasn
 '
 t
