--- a/mobile/android/focus-android/app/src/main/res/values-quc/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-quc/strings.xml
@@ -2050,6 +2050,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Chatzukuj
 pa
@@ -2114,6 +2121,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Chatzukuj
@@ -2181,6 +2195,13 @@ name
 =
 "
 text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Chatzukuj
@@ -2250,6 +2271,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Chatzukuj
 pa
@@ -2305,6 +2333,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -2694,6 +2729,47 @@ tob
 \
 '
 anem
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+category
+for
+ad
+blocking
+and
+enhanced
+tracking
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preference_category_tracking_protection3
+"
+>
+Uchajixik
+k
+\
+'
+exsuk
+\
+'
+umatal
+uterne
+\
+'
+xik
 <
 /
 string
@@ -7940,6 +8016,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Chatz
 apij
@@ -9675,6 +9765,13 @@ name
 "
 download_firefox
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Chaqasaj
 Firefox
@@ -9855,6 +9952,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -9989,6 +10093,14 @@ name
 =
 "
 your_rights_content3
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -10139,6 +10251,13 @@ name
 "
 your_rights_content4
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -10285,6 +10404,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -11945,6 +12071,753 @@ chech
 1
 s
 ?
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+text
+for
+a
+detail
+explanation
+indicating
+what
+will
+happen
+if
+cookie
+banner
+handling
+is
+on
+for
+a
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+placeholder
+will
+be
+updated
+with
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_description_state_on_for_site
+"
+>
+%
+1
+s
+kuchup
+we
+uk
+\
+'
+olib
+\
+'
+al
+web
+\
+'
+xuquje
+\
+'
+kuk
+\
+'
+ak
+\
+'
+arisaj
+le
+uxaq
+web
+\
+'
+.
+Ke
+\
+'
+uchupisaj
+konojel
+taq
+kukis
+wene
+kkitz
+\
+'
+apij
+kemchak
+on
+kkelesaj
+upam
+taq
+kare
+\
+'
+t
+rech
+loq
+\
+'
+oj
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+text
+for
+a
+detail
+explanation
+indicating
+what
+will
+happen
+if
+cookie
+banner
+handling
+is
+off
+for
+a
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+placeholder
+will
+be
+updated
+with
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_description_state_off_for_site2
+"
+>
+%
+1
+s
+wene
+kkitij
+uq
+\
+'
+ij
+retzelaxik
+pa
+utukelam
+taq
+tz
+\
+'
+onoj
+rech
+cookies
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+text
+for
+a
+detail
+explanation
+indicating
+that
+cookie
+banner
+reduction
+is
+not
+supported
+for
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_description_site_is_not_supported
+"
+>
+Chech
+we
+chanim
+we
+uk
+\
+'
+olib
+\
+'
+al
+web
+\
+'
+man
+kuk
+\
+'
+ulaj
+ta
+rib
+\
+'
+ruk
+\
+'
+nitz
+\
+'
+arisab
+\
+'
+al
+ub
+\
+'
+ixikil
+cookie
+.
+La
+kawaj
+kq
+\
+'
+atux
+we
+uk
+\
+'
+olib
+\
+'
+al
+web
+\
+'
+rumal
+le
+qawokaj
+ajchakib
+\
+'
+xuquje
+\
+'
+kuya
+\
+'
+toq
+\
+'
+ab
+\
+'
+al
+pa
+jampa
+\
+'
+aq
+\
+'
+anoq
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+cancel
+button
+indicating
+that
+cookie
+banner
+reduction
+is
+not
+supported
+for
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_site_is_not_supported_cancel_button
+"
+>
+Uq
+\
+'
+atexik
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+request
+support
+button
+indicating
+that
+cookie
+banner
+reduction
+is
+not
+supported
+for
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_site_is_not_supported_request_support_button
+"
+>
+Utz
+\
+'
+onik
+toq
+\
+'
+ab
+\
+'
+al
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+snackBar
+after
+the
+user
+reports
+with
+success
+a
+website
+where
+cookie
+banner
+reducer
+did
+not
+work
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_report_a_site_snackbar_label
+"
+>
+Tz
+\
+'
+onoj
+rech
+utoq
+\
+'
+axik
+uk
+\
+'
+olib
+\
+'
+al
+web
+\
+'
+taqom
+b
+\
+'
+ik
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+cookie
+banner
+item
+from
+tracking
+protection
+after
+the
+user
+reports
+with
+success
+a
+website
+where
+cookie
+banner
+reducer
+did
+not
+work
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_the_site_was_reported
+"
+>
+Tz
+\
+'
+onoj
+rech
+utoq
+\
+'
+axik
+uk
+\
+'
+olib
+\
+'
+al
+web
+\
+'
+taqom
+b
+\
+'
+ik
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Contextual
+Feature
+Recommendation
+Popups
+-
+-
+>
+<
+!
+-
+-
+CFR
+for
+Cookie
+Banner
+(
+Banner
+Info
+Message
+)
+.
+%
+1
+s
+will
+be
+replaced
+by
+the
+app
+name
+%
+2
+s
+will
+be
+an
+active
+link
+using
+the
+string
+cfr_cookie_banner_link
+as
+text
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_cookie_banner
+"
+>
+%
+1
+s
+kutij
+uq
+\
+'
+ij
+chech
+retzelaxik
+taq
+cookie
+are
+chi
+ke
+\
+'
+elesax
+le
+q
+\
+'
+at
+ub
+\
+'
+ixikil
+rech
+cookies
+.
+\
+n
+\
+n
+Krilawachij
+le
+taq
+ajawatal
+taq
+ub
+\
+'
+ixikil
+rech
+cookie
+pa
+%
+2
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+CFR
+for
+Cookie
+Banner
+(
+Banner
+Info
+Message
+)
+.
+This
+string
+is
+used
+as
+text
+for
+a
+link
+in
+cfr_cookie_banner
+and
+takes
+the
+user
+to
+the
+app
+settings
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_cookie_banner_link
+"
+>
+taq
+wiqitajem
 <
 /
 string
