Bug 1923457 - Update QR scanner icon label in awesomebar r=android-reviewers,007
Differential Revision: https://phabricator.services.mozilla.com/D225098

UltraBlame original commit: e148c7a9766e5f52e4200225cda7321e724b4f9f

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -6459,8 +6459,59 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Scan
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+Scan
+QR
+code
 <
 /
 string
