Bug 1910768 - Add an app-wide desktop mode browsing preference r=android-reviewers,rsainani
- Ensure any pre-loaded tabs have the correct desktop mode preference
- Rename BrowserActions related to toggling Desktop Mode to better indicate their use case
- Rename "Site permissions" to "Site settings"

Differential Revision: https://phabricator.services.mozilla.com/D222543

UltraBlame original commit: 8e3eff9c7b2e44c8eac2ba5b8b94b20a079ca1c2

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -9901,9 +9901,49 @@ name
 "
 preferences_site_permissions
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Site
 permissions
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+Site
+settings
 <
 /
 string
@@ -23113,6 +23153,121 @@ studies_off
 "
 >
 Off
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+Permissions
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Content
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+Always
+request
+desktop
+site
 <
 /
 string
